--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -35,7 +35,7 @@
       <div id="nav-donate-btn" class="col-md-3 col-xs-3">
         <a href="<%= donate_link %>">donate</a>
       </div>
-      <% if current_user && current_user.role == 'staff' %>
+      <% if current_user && current_user.admin_or_staff? %>
         <div class="col-md-3 col-xs-3">
           <a href="<%= board_portal_link %>" target="blank">board portal</a>
         </div>
