--- a/app/views/store/checkout.html.erb
+++ b/app/views/store/checkout.html.erb
@@ -1,21 +1,27 @@
 <div class="store-wrapper">
-  <%= form_tag charges_path do %>
-    <article>
-      <% if flash[:error].present? %>
-        <div id="error_explanation">
-          <p><%= flash[:error] %></p>
-        </div>
-      <% end %>
-      <label class="amount">
-        <span>Amount: $5.00</span>
-      </label>
-    </article>
+  <% if @product.nil? %>
+    <div class="checkout-empty">
+      You have not selected anything to purchase.
+    </div>
+  <% else %>
+    <%= form_tag charges_path do %>
+      <article>
+        <% if flash[:error].present? %>
+          <div id="error_explanation">
+            <p><%= flash[:error] %></p>
+          </div>
+        <% end %>
+        <label class="amount">
+          <span>Amount: <%= @product.formatted_price %></span>
+        </label>
+      </article>
 
-    <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-            data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-            data-description="A month's subscription"
-            data-amount="500"
-            data-locale="auto"></script>
+      <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+              data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+              data-description="<%= @product.name %>"
+              data-amount="<%= @product.price %>"
+              data-locale="auto"></script>
+    <% end %>
   <% end %>
 </div>
 
