--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -1,3 +1,76 @@
 .store-wrapper {
+  .page-title {
+    text-align: center;
+  }
 
+  .subtitle {
+    margin: 50px 0;
+    text-align: center;
+    font-style: italic;
+  }
+
+  .description {
+    text-align: center;
+  }
+
+  .testimonial {
+    width: 600px;
+    margin: 80px auto;
+    padding: 40px 40px 20px 40px;
+    background-color: $primary-blue;
+    color: white;
+  }
+
+  .bottom-header {}
+
+  .overview {
+    ul {
+      margin-left: 4em;
+      font-size: 1.2em;
+    }
+  }
+
+  .product-items {
+    margin: 50px auto;
+    display: flex;
+    justify-content: center;
+
+    .product-item {
+      width: 250px;
+      height: 350px;
+      padding: 20px;
+      color: white;
+      position: relative;
+
+      .product-info {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        padding: 20px;
+        background-color: rgba(0, 0, 0, 0.5);
+        text-align: center;
+      }
+
+      .product-name {
+        h3 {
+          color: white;
+        }
+      }
+
+      .product-name::after {
+        content: "–";
+      }
+
+      .product-price {
+        font-size: 1.2em;
+      }
+    }
+
+    .product-item:first-child {
+      margin-right: 50px;
+    }
+  }
+
+  .coming-soon {}
 }
