:sparkles: make that header pop

--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,8 +1,12 @@
 <div class="store-wrapper">
-  <div class="page-title">
-    <h1>Doodles Academy Store</h1>
+  <div class="header">
+    <div class="inner-header">
+      <div class="page-title">
+        <h1>Doodles Academy Store</h1>
+      </div>
+      <div class="subtitle">Curricular Enhancements to Fuel High Impact Learning &amp; Teaching</div>
+    </div>
   </div>
-  <div class="subtitle">Curricular Enhancements to Fuel High Impact Learning &amp; Teaching</div>
   <div class="description">
     <p>Implement an impactful art curriculum regardless of what and where you teach. This store is your one-stop shop for curricular enhancements to seamlessly bring art into your classroom.</p>
   </div>
