--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -1,10 +1,35 @@
 .store-wrapper {
+  .header {
+    height: 275px;
+    margin-bottom: 50px;
+    background: url('heros/store.png');
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .inner-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 25px;
+    width: 500px;
+    color: white;
+    border: 1px solid white;
+
+    h1 {
+      color: white;
+    }
+  }
+
   .page-title {
     text-align: center;
   }
 
   .subtitle {
-    margin: 50px 0;
     text-align: center;
     font-style: italic;
   }
