--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -10,25 +10,32 @@
   <div class="description">
     <p>Implement an impactful art curriculum regardless of what and where you teach. This store is your one-stop shop for curricular enhancements to seamlessly bring art into your classroom.</p>
   </div>
-  <div class="testimonial">
-    <p>"Thanks to Doodles I was able to experience what it takes to bring students from conception to completion of a high quality art project. And it wasn't just the kids who typically love art that felt successful; all my students loved the work they produced!"</p>
-    <p>-David Scholten, 5th Grade Teacher, Portland, OR</p>
+  <div class="bottom-wrapper">
+    <div class="overview-wrapper">
+      <div class="bottom-header">
+        <h1>Curriculum Sets</h1>
+      </div>
+      <div class="overview">
+        <p>Our Curriculum Sets are carefully curated selections of elementary school-aged visual art projects. Each Curriculum Set includes:</p>
+        <ul>
+          <li>downloadable lesson plans</li>
+          <li>a scope &amp; sequence</li>
+          <li>objectives</li>
+          <li>vocabulary</li>
+          <li>assessments</li>
+          <li>learning extensions</li>
+          <li>links to professional development pages</li>
+        </ul>
+        <p>Our Curriculum Sets are more than just an art curriculum. Every lesson encourages critical thinking, speaking, and listening skills. Students develop habits of mind that they can apply to their art, their school work…and to their life. These sets are meticulously planned, easy to implement, aligned to college-and-career ready standards, as well as to the National Core Visual Art Standards, and require no training to implement.</p>
+      </div>
+    </div>
+    <div class="testimonial">
+      <p>"Thanks to Doodles I was able to experience what it takes to bring students from conception to completion of a high quality art project. And it wasn't just the kids who typically love art that felt successful; all my students loved the work they produced!"</p>
+      <p>-David Scholten, 5th Grade Teacher, Portland, OR</p>
+    </div>
   </div>
-  <div class="bottom-header">
-    <h1>Curriculum Sets</h1>
-  </div>
-  <div class="overview">
-    <p>Our Curriculum Sets are carefully curated selections of elementary school-aged visual art projects. Each Curriculum Set includes:</p>
-    <ul>
-      <li>downloadable lesson plans</li>
-      <li>a scope &amp; sequence</li>
-      <li>objectives</li>
-      <li>vocabulary</li>
-      <li>assessments</li>
-      <li>learning extensions</li>
-      <li>links to professional development pages</li>
-    </ul>
-    <p>Our Curriculum Sets are more than just an art curriculum. Every lesson encourages critical thinking, speaking, and listening skills. Students develop habits of mind that they can apply to their art, their school work…and to their life. These sets are meticulously planned, easy to implement, aligned to college-and-career ready standards, as well as to the National Core Visual Art Standards, and require no training to implement.</p>
+  <div class="products-header">
+    <h2>Available curriculum sets</h2>
   </div>
   <div class="product-items">
     <% @products.each do |product| %>
