--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -39,16 +39,18 @@
   </div>
   <div class="product-items">
     <% @products.each do |product| %>
-      <div class="product-item" style="background-image: url(<%= product.image_url %>);">
-        <div class="product-info">
-          <div class="product-name">
-            <h3><%= product.name %></h3>
-          </div>
-          <div class="product-price">
-            <%= product.formatted_price %>
+      <a href="/store/product?sku=<%= product.sku %>">
+        <div class="product-item" style="background-image: url(<%= product.image_url %>);">
+          <div class="product-info">
+            <div class="product-name">
+              <h3><%= product.name %></h3>
+            </div>
+            <div class="product-price">
+              <%= product.formatted_price %>
+            </div>
           </div>
         </div>
-      </div>
+      </a>
     <% end %>
   </div>
   <div class="coming-soon">
