--- a/app/views/home/donate.html.erb
+++ b/app/views/home/donate.html.erb
@@ -1,3 +1,24 @@
 <div class="donation-wrapper">
-  <div id='donation'></div>
+  <div class="donation-header">
+    <div class="donation-inner-header">
+      <h1>Donate to Doodles Academy</h1>
+    </div>
+  </div>
+  <div class="donation-body-wrapper">
+    <div class="donation-info">
+      <div class="donation-blurb">
+        <p>Your donation directly supports our mission, and allows us to offer our program for free, no strings attached, to any family, school, or community center who needs it.</p>
+      </div>
+      <div class="donation-testimonial">
+        <p>“I am a second grade teacher at a low SES school in Reno, Nevada. [...] I see a huge connection with kids who are struggling at home to meet their basic needs and art. When given the opportunity to express themselves through art they are able to communicate their pain, their dreams, their desires and their hopes. It is like magic.“</p>
+        <p>-Janelle Mousel</p>
+      </div>
+      <div class="donation-footer">
+        <p>Doodles Academy is a <strong>501(c)3</strong> and donations are tax deductible to the extent allowed by law. <strong>EIN: 47-4434306</strong>.</p>
+      </div>
+    </div>
+    <div class="donation-widget">
+      <script src="https://donorbox.org/widget.js" paypalExpress="false"></script><iframe src="https://donorbox.org/embed/donations-463?hide_donation_meter=true" height="685px" width="100%" style="max-width:500px; min-width:310px; max-height:none!important" seamless="seamless" name="donorbox" frameborder="0" scrolling="no" allowpaymentrequest></iframe>
+    </div>
+  </div>
 </div>
