Add sensible linking for store

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -32,6 +32,12 @@
           <a href="/classes" hidden>PDX Classes</a>
         </div>
       </div>
+      <div class="col-md-2 col-xs-3 dropdown">
+        <a href="/store">store</a>
+        <div class="dropdown-content">
+          <a href="/store/checkout" hidden>checkout</a>
+        </div>
+      </div>
       <div id="nav-donate-btn" class="col-md-3 col-xs-3">
         <a href="<%= donate_link %>">donate</a>
       </div>
