--- a/app/views/store/checkout.html.erb
+++ b/app/views/store/checkout.html.erb
@@ -1,7 +1,7 @@
 <div class="checkout-wrapper">
   <div class="checkout-header">
     <div class="checkout-inner-header">
-      <h1>Checkout</h1>
+      <h1><a href="/store">Home</a> &gt; Checkout</h1>
     </div>
   </div>
   <div class="checkout-body-wrapper">
