--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,4 +1,7 @@
 <div class="store-wrapper">
+  <div class="store-breadcrumbs">
+    <h2>Home &gt; <a href="/store/checkout">Checkout</a></h2>
+  </div>
   <div class="header">
     <div class="inner-header">
       <div class="page-title">
