--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -46,7 +46,7 @@
         <div class="product-item" style="background-image: url(<%= product.image_url %>);">
           <div class="product-info">
             <div class="product-name">
-              <h3><%= product.name %></h3>
+              <h3><%= product.full_title %></h3>
             </div>
             <div class="product-price">
               <%= product.formatted_price %>
