--- a/app/views/store/product.html.erb
+++ b/app/views/store/product.html.erb
@@ -14,7 +14,7 @@
     </div>
     <div class="store-sidebar">
       <div class="product-name">
-        <h2><%= @product.name %></h2>
+        <h2><%= @product.full_title %></h2>
       </div>
       <div class="product-price">
         <%= @product.formatted_price %>
