--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -202,7 +202,35 @@
 
 .checkout-wrapper {
   .checkout-header {
+    height: 275px;
     margin-bottom: 50px;
+    background: url('heros/checkout.png');
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .checkout-inner-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 25px;
+    width: 500px;
+    color: white;
+    border: 1px solid white;
+
+    h1 {
+      color: white;
+      margin: 0;
+    }
+  }
+
+  .checkout-breadcrumbs {
+    margin-bottom: 20px;
   }
 
   .checkout-body-wrapper {
@@ -212,6 +240,8 @@
 
   .checkout-items-wrapper {
     width: 70%;
+    padding: 20px 20px 0 20px;
+    border: 1px solid #eee;
   }
 
   .checkout-items-list {
@@ -250,6 +280,16 @@
 
         a {
           color: $primary-red;
+        }
+      }
+
+      tr.total-row {
+        td:not(first-child) {
+          text-align: right;
+          padding-right: 20px;
+          padding-bottom: 20px;
+          font-weight: bold;
+          font-size: 1.2em;
         }
       }
     }
