:sparkles: finish up checkout style

--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -315,4 +315,12 @@
     font-size: 0.8em;
     font-color: #aaa;
   }
+
+  .logged-in-as {
+    margin-bottom: 20px;
+  }
+
+  span.logged-in-email {
+    font-weight: bold;
+  }
 }
