--- a/app/views/store/checkout.html.erb
+++ b/app/views/store/checkout.html.erb
@@ -46,7 +46,8 @@
             <p>You may also <a href="/users/sign_up">sign up</a>, if you don't already have an account.</p>
           </div>
         <% else %>
-          <div class="logged-in-as">Signed in as <%= current_user.email %>.</div>
+          <div class="logged-in-as">Signed in as: <span class="logged-in-email"><%= current_user.email %></span>.</div>
+          <div>You'll be able to view your purchased materials in <a href="/artroom">your artroom</a>.</div>
         <% end %>
       </div>
       <div class="checkout-actions">
