--- a/app/assets/stylesheets/artroom.scss
+++ b/app/assets/stylesheets/artroom.scss
@@ -31,7 +31,7 @@
   }
 
   h1 {
-    margin-top: 50px;
+    margin: 120px 0 60px 0;
   }
 
   h1, h4 {
@@ -157,6 +157,46 @@
     margin-right: 40px;
   }
 
+}
+
+.purchased-materials {
+  h1 {
+    margin-bottom: 20px;
+  }
+  ul {
+    font-size: 1.2em;
+    list-style: none;
+  }
+
+  a {
+    text-decoration: none;
+    color: black;
+  }
+
+  .material-container {
+    padding-right: 20px;
+    display: flex;
+    align-items: center;
+    transition: background-color 0.5s ease, outline 0.3s ease;
+
+    &:not(last-child) {
+      margin-bottom: 60px;
+    }
+
+    &:hover {
+      background-color: #eee;
+      outline: 6px solid $primary-blue;
+    }
+  }
+
+  .material-image {
+    width: 25%;
+    margin-right: 60px;
+  }
+
+  .material-link {
+    font-size: 1.2em;
+  }
 }
 
 .hero-page-title, #artroomModal {
