--- a/app/views/users/artroom.html.erb
+++ b/app/views/users/artroom.html.erb
@@ -169,7 +169,7 @@
         <ul>
           <% @products.each do |prod| %>
             <li>
-              <a href="/store">
+              <a href="<%= prod.material_link %>">
                 <div class="material-container">
                   <div class="material-image">
                     <img src="<%= prod.image_url %>">
