--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -181,7 +181,7 @@
 
     .product-includes {
       h3 {
-        font-style: bold;
+        font-weight: bold;
       }
 
       ul {
@@ -322,5 +322,97 @@
 
   span.logged-in-email {
     font-weight: bold;
+  }
+}
+
+.landing-wrapper {
+  .landing-cta {
+    margin-bottom: 20px;
+
+    a {
+      background-color: $primary-blue;
+      border-radius: 5px;
+      color: white;
+      padding: 1em 5em 1em 5em;
+      text-decoration: none;
+      font-size: 1.2em;
+    }
+
+    a:focus, a:hover {
+      background-color: $darker-blue;
+    }
+  }
+
+  .landing-description {
+    width: 70%;
+  }
+
+  .cta-bottom {
+    text-align: center;
+    margin-bottom: 160px;
+  }
+
+  .landing-hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    background: url('heros/about.jpg');
+    height: 400px;
+  }
+
+  .landing-inner-hero {
+    width: 75%;
+    height: 75%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    justify-content: space-evenly;
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: 1px solid white;
+
+    h1 {
+      color: white;
+    }
+  }
+
+  .landing-blocks {
+    margin: 80px 0 120px 0;
+  }
+
+  .landing-blocks-wrapper {
+    display: flex;
+    justify-content: space-between;
+
+    .landing-block {
+      width: 30%;
+      background-color: $primary-blue;
+      color: white;
+      padding: 20px 30px 10px 30px;
+
+      &.white {
+        background-color: white;
+        color: $primary-blue;
+        outline: 4px solid $primary-blue;
+      }
+    }
+
+    .landing-block-number {
+      text-align: center;
+      font-size: 2.0em;
+    }
+
+    .landing-block-title {
+      font-size: 1.4em;
+      font-weight: bold;
+    }
+  }
+
+  .landing-blocks-title {
+    text-align: center;
+    margin-bottom: 60px;
   }
 }
