--- a/app/views/store/landing.html.erb
+++ b/app/views/store/landing.html.erb
@@ -1,18 +1,20 @@
-<div class="store-wrapper">
+<div class="landing-wrapper">
   <div class="landing-hero">
-    <div class="landing-title">
-      <h1>Curriculum Sets</h1>
-    </div>
-    <div class="landing-description">
-      <p>Our Curriculum Sets are carefully curated selections of elementary school-aged visual art projects.  These sets are meticulously planned, easy to implement, aligned to college-and-career ready standards, as well as to the National Core Visual Art Standards, and require no training to implement.</p>
-    </div>
-    <div class="landing-cta">
-      <button>Find out More</button>
+    <div class="landing-inner-hero">
+      <div class="landing-title">
+        <h1>Curriculum Sets</h1>
+      </div>
+      <div class="landing-description">
+        <p>Our Curriculum Sets are carefully curated selections of elementary school-aged visual art projects.  These sets are meticulously planned, easy to implement, aligned to college-and-career ready standards, as well as to the National Core Visual Art Standards, and require no training to implement.</p>
+      </div>
+      <div class="landing-cta">
+        <a href="/store">Find out More</a>
+      </div>
     </div>
   </div>
   <div class="landing-blocks">
     <div class="landing-blocks-title">
-      <h3>How It Works</h3>
+      <h2>How It Works</h2>
     </div>
     <div class="landing-blocks-wrapper">
       <div class="landing-block">
@@ -20,7 +22,7 @@
         <p class="landing-block-title">Choose Your Curriculum Set</p>
         <p class="landing-block-description">Select a Curriculum Set that meets your classroom objectives. Feel confident that you can handle anything with  comprehensive lesson plans that offer focus questions, discussion techniques, guides for anticipated problems, and ideas for early finishers.</p>
       </div>
-      <div class="landing-block">
+      <div class="landing-block white">
         <p class="landing-block-number">2</p>
         <p class="landing-block-title">Download your Lessons</p>
         <p class="landing-block-description">Each Curriculum Set includes downloadable lesson plans, a scope & sequence, links to video demonstrations, objectives, vocabulary, assessments, learning extensions, and links to professional development pages.</p>
@@ -32,8 +34,8 @@
       </div>
     </div>
   </div>
-  <div class="landing-bottom-cta">
-    <button>Choose Your Curriculum Set</button>
+  <div class="landing-cta cta-bottom">
+    <a href="/store">Choose Your Curriculum Set</a>
   </div>
   <div class="landing-bottom-hero"></div>
 </div>
