--- a/app/views/users/artroom.html.erb
+++ b/app/views/users/artroom.html.erb
@@ -172,7 +172,7 @@
               <a href="<%= prod.material_link %>">
                 <div class="material-container">
                   <div class="material-image">
-                    <img src="<%= prod.image_url %>">
+                    <img src="<%= image_url(prod.image_url) %>">
                   </div>
                   <div class="material-link">
                     <%= prod.full_title %>
