--- a/app/views/store/product.html.erb
+++ b/app/views/store/product.html.erb
@@ -5,7 +5,7 @@
   <div class="product-wrapper">
     <div class="product-detail">
       <div class="product-image">
-        <img class="main-image" src="<%= @product.image_url %>">
+        <img class="main-image" src="<%= image_url(@product.image_url) %>">
       </div>
       <div class="product-carousel"></div>
       <div class="product-description">
