:sparkles: change checkout to my cart

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -35,7 +35,7 @@
       <div class="col-md-2 col-xs-3 dropdown">
         <a href="/store">store</a>
         <div class="dropdown-content">
-          <a href="/store/checkout" hidden>checkout</a>
+          <a href="/store/checkout" hidden>my cart</a>
         </div>
       </div>
       <div id="nav-donate-btn" class="col-md-3 col-xs-3">
