--- a/app/views/store/product.html.erb
+++ b/app/views/store/product.html.erb
@@ -1,6 +1,6 @@
 <div class="store-wrapper">
   <div class="product-breadcrumbs">
-    <h2><a href="/store">Home</a> &gt; <%= @product.name %> &gt; <a href="/store/checkout">Checkout</a></h2>
+    <h2><a href="/store">Home</a> &gt; <%= @product.name %> &gt; <a href="/store/checkout">My Cart</a></h2>
   </div>
   <div class="product-wrapper">
     <div class="product-detail">
