--- a/app/views/store/checkout.html.erb
+++ b/app/views/store/checkout.html.erb
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="checkout-breadcrumbs">
-    <h2><a href="/store">Home</a> &gt; Checkout</h2>
+    <h2><a href="/store">Home</a> &gt; My Cart</h2>
   </div>
   <div class="checkout-body-wrapper">
     <div class="checkout-items-wrapper">
