:sparkles: add pinterest verification

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   <link rel="shortcut icon" href="<%= image_path('favicon.ico') %>" type="image/x-icon">
   <link rel="icon" href="<%= image_path 'favicon.ico' %>" type="image/x-icon">
   <link href='https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700,800|Special+Elite:300,400,600,700,800|Open+Sans:400,300italic,600,700|Raleway:100,200,300,400,500,600,700' rel='stylesheet' type='text/css'>
+  <meta name="p:domain_verify" content="3289347d7f80c14a0524aeb8183b4943"/>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
