:memo: change copy on curriculum set link

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,7 +3,7 @@
 
 <div class="projects-index">
   <div class="project-kit-notification">
-    New! Check out our <a href="<%= project_kits_link %>">Project Kits</a>!
+    New! Check out our <a href="<%= project_kits_link %>">Curriculum Sets</a>!
   </div>
 
   <h1 class="centered">An overview</h1>
